--- a/Index.html
+++ b/Index.html
@@ -5,5 +5,6 @@
 <p> It is characterised by large, black patches around its eyes, over the ears, and across its round body.</p> 
 <p>The name "giant panda" is sometimes used to distinguish it from the red panda, a neighboring mustelid. </p>
 <p>Though it belongs to the order Carnivora, the giant panda is a folivore, with bamboo shoots and leaves making up more than 99% of its diet.[7]</p>
+<p> Giant pandas in the wild will occasionally eat other grasses, wild tubers, or even meat in the form of birds, rodents, or carrion.</p>
 <p> Giant pandas <b>IN THE WILD</b> will occasionally eat other grasses, wild tubers, or even meat in the form of birds, rodents, or carrion.</p>
 <p> In captivity, they may receive honey, eggs, fish, yams, shrub leaves, oranges, or bananas along with specially prepared food.</p>
