--- a/Index.html
+++ b/Index.html
@@ -5,6 +5,8 @@
 
 <p> It is characterised by large, black patches around its eyes, over the ears, and across its round body.</p> 
 
+<img src="Grosser_Panda.JPG" />
+
 <p>The name "giant panda" is sometimes used to distinguish it from the red panda, a neighboring mustelid. </p>
 
 <p>Though it belongs to the order Carnivora, the giant panda is a folivore, with bamboo shoots and leaves making up more than 99% of its diet.</p>
