--- a/Index.html
+++ b/Index.html
@@ -1,7 +1,14 @@
-<h1>Giant Panda</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Panda Site</title>
+</head>
+<body>
+    <h1>Giant Panda</h1>
 
-
-<p>The giant panda (Ailuropoda melanoleuca; Chinese: 大熊猫; pinyin: dàxióngmāo), also known as the panda bear or simply the panda, is a bear native to south central China.</p>
+    <p>The giant panda (Ailuropoda melanoleuca; Chinese: 大熊猫; pinyin: dàxióngmāo), also known as the panda bear or simply the panda, is a bear native to south central China.</p>
 
 <p> It is characterised by large, black patches around its eyes, over the ears, and across its round body.</p> 
 
@@ -14,3 +21,10 @@
 <p> Giant pandas in the wild will occasionally eat other grasses, wild tubers, or even meat in the form of birds, rodents, or carrion.</p>
 
 <p> In captivity, they may receive honey, eggs, fish, yams, shrub leaves, oranges, or bananas along with specially prepared food.</p>
+</body>
+</html>
+
+
+
+
+
