--- a/Index.html
+++ b/Index.html
@@ -7,21 +7,26 @@
     <title>My Panda Site</title>
 </head>
 <body>
+
+    <div class ="column">
+
     <h1>Giant panda</h1>
 
     <p>The giant panda (Ailuropoda melanoleuca; Chinese: 大熊猫; pinyin: dàxióngmāo), also known as the panda bear or simply the panda, is a bear native to south central China.</p>
 
-<p> It is characterised by large, black patches around its eyes, over the ears, and across its round body.</p> 
+    <p> It is characterised by large, black patches around its eyes, over the ears, and across its round body.</p> 
 
-<img src="Grosser_Panda.JPG" />
+    <img src="Grosser_Panda.JPG" />
 
-<p>The name "giant panda" is sometimes used to distinguish it from the red panda, a neighboring mustelid. </p>
+    <p>The name "giant panda" is sometimes used to distinguish it from the red panda, a neighboring mustelid. </p>
 
-<p>Though it belongs to the order Carnivora, the giant panda is a folivore, with bamboo shoots and leaves making up more than 99% of its diet.</p>
+    <p>Though it belongs to the order Carnivora, the giant panda is a folivore, with bamboo shoots and leaves making up more than 99% of its diet.</p>
 
-<p> Giant pandas in the wild will occasionally eat other grasses, wild tubers, or even meat in the form of birds, rodents, or carrion.</p>
+    <p> Giant pandas in the wild will occasionally eat other grasses, wild tubers, or even meat in the form of birds, rodents, or carrion.</p>
 
-<p> In captivity, they may receive honey, eggs, fish, yams, shrub leaves, oranges, or bananas along with specially prepared food.</p>
+    <p> In captivity, they may receive honey, eggs, fish, yams, shrub leaves, oranges, or bananas along with specially prepared food.</p>
+
+    </div>
 </body>
 </html>
 
