--- a/Index.html
+++ b/Index.html
@@ -26,6 +26,10 @@
 
     <p> In captivity, they may receive honey, eggs, fish, yams, shrub leaves, oranges, or bananas along with specially prepared food.</p>
 
+    <p>Panda cubs</p>
+
+    <img src="Baby_Pandas.JPG" />
+
     </div>
 </body>
 </html>
