--- a/Index.html
+++ b/Index.html
@@ -12,7 +12,7 @@
 
     <h1>Giant panda</h1>
 
-    <p>The giant panda (Ailuropoda melanoleuca; Chinese: 大熊猫; pinyin: dàxióngmāo), also known as <b>THE PANDA BEAR</b> or simply the panda, is a bear native to south central China.</p>
+    <p>The giant panda (Ailuropoda melanoleuca; Chinese: 大熊猫; pinyin: dàxióngmāo), also known as <b>THE PANDA BEAR</b> or simply the panda, is a bear native to <a href= "https://en.wikipedia.org/wiki/South_Central_China">south central China.</a></p>
 
     <p> It is characterised by large, black patches around its eyes, over the ears, and across its round body.</p> 
 
